[gd_scene load_steps=20 format=3 uid="uid://it43rblxavm7"]

[ext_resource type="Script" uid="uid://bv7jj28a3qdes" path="res://wheels/mazda.gd" id="1_8jeoy"]
[ext_resource type="PackedScene" uid="uid://dadmsbpoa6hg2" path="res://mazda_titan_92_lowpoly/scene.gltf" id="2_pagpr"]
[ext_resource type="Script" uid="uid://bersy3r4essbh" path="res://mazda_titan_92_lowpoly/spin.gd" id="3_8jeoy"]
[ext_resource type="PackedScene" uid="uid://dw8y61ewlcj7t" path="res://uploads_files_3033571_format/RX7_FBX.fbx" id="4_16lcb"]
[ext_resource type="Script" uid="uid://bh0i3xehcv1aq" path="res://uploads_files_3033571_format/spin.gd" id="5_wuoqb"]
[ext_resource type="FontFile" uid="uid://c4vgkmg88brn8" path="res://CarFonts/MAZDA.ttf" id="6_8jeoy"]
[ext_resource type="FontFile" uid="uid://cfinroaghwgd7" path="res://klein-headline/KleinHeadline-BoldOblique.ttf" id="8_ku7ff"]
[ext_resource type="FontFile" uid="uid://db654gvwuv7yr" path="res://CarFonts/NissanOpti.otf" id="9_in0mv"]

[sub_resource type="PlaneMesh" id="PlaneMesh_24ex3"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_64a7q"]
transparency = 1
albedo_color = Color(0.52549, 0.52549, 0.52549, 0.647059)
metallic = 1.0
roughness = 0.0
refraction_enabled = true

[sub_resource type="ViewportTexture" id="ViewportTexture_xta6s"]
viewport_path = NodePath("SubViewport")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_a1mw1"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0pq5w"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_mp4nm"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_untbv"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0pq5w"]
bg_color = Color(0, 0, 0.384314, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mp4nm"]
bg_color = Color(0, 0, 0.384314, 1)

[sub_resource type="Theme" id="Theme_pagpr"]
Button/colors/font_color = Color(0, 0.603922, 0.831373, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8jeoy"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_8jeoy")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(0.0299148, -0.219233, 0.975214, 0.00672183, 0.975672, 0.21913, -0.99953, -1.86352e-09, 0.0306607, 12.5287, 6.59875, -31.6137)

[node name="SubViewport" type="SubViewport" parent="."]

[node name="Camera3D" type="Camera3D" parent="SubViewport"]
transform = Transform3D(-0.0140496, -0.143003, 0.989622, 0.00121263, 0.989717, 0.143034, -0.999901, 0.00320961, -0.0137317, 9.59669, 4.50477, -0.915972)

[node name="Titan" type="Node3D" parent="."]

[node name="OmniLight3D7" type="OmniLight3D" parent="Titan"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.50428, 2.60401, -6.41122)
light_energy = 7.0

[node name="MeshInstance3D" type="MeshInstance3D" parent="Titan"]
transform = Transform3D(9.14702, 0, 0, 0, 1, 0, 0, 0, 10.013, -0.398246, 0, -0.0968595)
mesh = SubResource("PlaneMesh_24ex3")
skeleton = NodePath("")
surface_material_override/0 = SubResource("StandardMaterial3D_64a7q")

[node name="OmniLight3D" type="OmniLight3D" parent="Titan"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5.28355, 0)
light_energy = 7.02

[node name="OmniLight3D2" type="OmniLight3D" parent="Titan"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6.38974, 1.76309, 0)
light_energy = 7.0

[node name="OmniLight3D4" type="OmniLight3D" parent="Titan"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.740989, 1.76309, -10.5757)
light_energy = 7.0

[node name="OmniLight3D5" type="OmniLight3D" parent="Titan"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.740989, 1.76309, 7.8168)
light_energy = 7.0

[node name="OmniLight3D6" type="OmniLight3D" parent="Titan"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.89402, 1.76309, 6.32944)
light_energy = 7.0

[node name="OmniLight3D9" type="OmniLight3D" parent="Titan"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.448557, 1.78101, -1.7227)
light_energy = 7.0

[node name="OmniLight3D8" type="OmniLight3D" parent="Titan"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.13688, 2.60401, -8.30065)
light_energy = 7.0

[node name="SpotLight3D" type="SpotLight3D" parent="Titan"]
transform = Transform3D(1, 0, 0, 0, 0.740335, 0.672238, 0, -0.672238, 0.740335, 0, 4.94202, 6.00634)
light_energy = 4.0
spot_range = 8.195

[node name="Sketchfab_Scene" parent="Titan" instance=ExtResource("2_pagpr")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.100816, 0.106534, 0.122666)
script = ExtResource("3_8jeoy")

[node name="Sketchfab_Scene2" parent="Titan" instance=ExtResource("2_pagpr")]
transform = Transform3D(-1, 8.74228e-08, 0, -8.74228e-08, -1, 0, 0, 0, 1, 0.100816, -0.011821, 0.122666)
script = ExtResource("3_8jeoy")

[node name="OmniLight3D3" type="OmniLight3D" parent="Titan"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6.08606, 1.76309, 0)
light_energy = 7.0

[node name="RX7" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -31.6496)

[node name="OmniLight3D7" type="OmniLight3D" parent="RX7"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.50428, 2.60401, -6.41122)
light_energy = 7.0

[node name="MeshInstance3D" type="MeshInstance3D" parent="RX7"]
transform = Transform3D(9.14702, 0, 0, 0, 1, 0, 0, 0, 10.013, -0.398246, 0, -0.0968595)
mesh = SubResource("PlaneMesh_24ex3")
skeleton = NodePath("")
surface_material_override/0 = SubResource("StandardMaterial3D_64a7q")

[node name="OmniLight3D" type="OmniLight3D" parent="RX7"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5.28355, 0)
light_energy = 7.02

[node name="OmniLight3D2" type="OmniLight3D" parent="RX7"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6.38974, 1.76309, 0)
light_energy = 7.0

[node name="OmniLight3D4" type="OmniLight3D" parent="RX7"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.740989, 1.76309, -10.5757)
light_energy = 7.0

[node name="OmniLight3D5" type="OmniLight3D" parent="RX7"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.740989, 1.76309, 7.8168)
light_energy = 7.0

[node name="OmniLight3D6" type="OmniLight3D" parent="RX7"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.89402, 1.76309, 6.32944)
light_energy = 7.0

[node name="OmniLight3D9" type="OmniLight3D" parent="RX7"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.448557, 1.78101, -1.7227)
light_energy = 7.0

[node name="OmniLight3D8" type="OmniLight3D" parent="RX7"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.13688, 2.60401, -8.30065)
light_energy = 7.0

[node name="SpotLight3D" type="SpotLight3D" parent="RX7"]
transform = Transform3D(1, 0, 0, 0, 0.740335, 0.672238, 0, -0.672238, 0.740335, 0, 4.94202, 6.00634)
light_energy = 4.0
spot_range = 8.195

[node name="OmniLight3D3" type="OmniLight3D" parent="RX7"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6.08606, 1.76309, 0)
light_energy = 7.0

[node name="RX7_FBX" parent="RX7" instance=ExtResource("4_16lcb")]
transform = Transform3D(280, 0, 0, 0, 280, 0, 0, 0, 280, -0.0978041, 0, -0.214733)
script = ExtResource("5_wuoqb")

[node name="RX7_FBX2" parent="RX7" instance=ExtResource("4_16lcb")]
transform = Transform3D(-280, -2.44784e-05, 0, 2.44784e-05, -280, 0, 0, 0, 280, -0.0978041, 0.0551288, -0.214733)
script = ExtResource("5_wuoqb")

[node name="TitanLabels" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="TextureRect" type="TextureRect" parent="TitanLabels"]
layout_mode = 0
offset_left = 330.0
offset_top = 133.0
offset_right = 842.0
offset_bottom = 645.0
texture = SubResource("ViewportTexture_xta6s")

[node name="Label" type="Label" parent="TitanLabels"]
layout_mode = 0
offset_left = 428.0
offset_top = 189.0
offset_right = 743.0
offset_bottom = 232.0
theme_override_fonts/font = ExtResource("6_8jeoy")
theme_override_font_sizes/font_size = 50
text = "1992 Titan"

[node name="Label2" type="Label" parent="TitanLabels"]
layout_mode = 0
offset_left = 292.0
offset_top = 230.0
offset_right = 874.0
offset_bottom = 294.0
theme_override_fonts/font = ExtResource("6_8jeoy")
theme_override_font_sizes/font_size = 50
text = "Commercial Truck"

[node name="Button" type="Button" parent="."]
visible = false
offset_left = 990.0
offset_top = 282.0
offset_right = 1081.0
offset_bottom = 346.0
text = "NEXT"

[node name="RX7Labels" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="RX7Labels"]
layout_mode = 0
offset_left = 413.0
offset_top = 188.0
offset_right = 769.0
offset_bottom = 238.0
theme_override_fonts/font = ExtResource("6_8jeoy")
theme_override_font_sizes/font_size = 60
text = "1995 RX-7"

[node name="Label2" type="Label" parent="RX7Labels"]
layout_mode = 0
offset_left = 498.0
offset_top = 239.0
offset_right = 679.0
offset_bottom = 264.0
theme_override_fonts/font = ExtResource("6_8jeoy")
theme_override_font_sizes/font_size = 30
text = "FD TURBO"

[node name="Button10" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 184.0
offset_top = 61.0
offset_right = 339.0
offset_bottom = 128.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("8_ku7ff")
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_a1mw1")
theme_override_styles/hover = SubResource("StyleBoxEmpty_0pq5w")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_mp4nm")
theme_override_styles/normal = SubResource("StyleBoxFlat_untbv")
text = "Return"

[node name="Button2" type="Button" parent="."]
offset_left = 821.0
offset_top = 519.0
offset_right = 1140.0
offset_bottom = 628.0
theme_override_fonts/font = ExtResource("9_in0mv")
theme_override_font_sizes/font_size = 80
theme_override_styles/hover = SubResource("StyleBoxFlat_0pq5w")
theme_override_styles/normal = SubResource("StyleBoxFlat_mp4nm")
text = "START"

[node name="Button3" type="Button" parent="."]
visible = false
offset_left = 71.0
offset_top = 279.0
offset_right = 168.0
offset_bottom = 418.0
text = "BACK"

[node name="Button4" type="Button" parent="."]
offset_left = 440.0
offset_top = 131.0
offset_right = 735.0
offset_bottom = 189.0
mouse_filter = 2
theme = SubResource("Theme_pagpr")
theme_override_fonts/font = ExtResource("6_8jeoy")
theme_override_font_sizes/font_size = 70
theme_override_styles/normal = SubResource("StyleBoxEmpty_8jeoy")
text = "MAZDA"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button10" to="." method="_on_button_10_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_button_3_pressed"]
